[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/cinematics/cinematic_intro.gd" type="Script" id=1]
[ext_resource path="res://game/assets/main_theme.tres" type="Theme" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="tutorial_timer" type="Timer" parent="."]
wait_time = 10.0

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
margin_left = 90.0
margin_top = 23.0
margin_right = 390.0
margin_bottom = 246.0
alignment = 1

[node name="tutorial_label" type="Label" parent="Panel/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 300.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
text = "lorem ipsum dolar, est this is a obogo mana"
autowrap = true

[node name="button_enter" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
margin_top = 204.0
margin_right = 300.0
margin_bottom = 223.0
text = "Enter the Dungeon!"

[node name="button_skip" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 204.0
margin_right = 300.0
margin_bottom = 223.0
text = "Skip"

[connection signal="timeout" from="tutorial_timer" to="." method="_on_tutorial_timer_timeout"]
[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/button_enter" to="." method="_on_button_enter_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/button_skip" to="." method="_on_button_skip_pressed"]
